@@ -390,7 +390,7 @@ public class JSONParser extends AbstractParser {
 	private Boolean getBoolean(JSONObject object, String tag)
 			throws JSONException {
 		try {
-			return new Boolean(object.getBoolean(tag));
+			return Boolean.valueOf(object.getBoolean(tag));
 		} catch (Exception e) {
 			return Boolean.FALSE;
 		}
